@@ -2,6 +2,8 @@
 
 HEAD
 
+  Shift.concat
+
 
 0.3.0
 
